...
  return (
    <View style={[styles.container, { backgroundColor: colors.background }]}>
      <Header />
      <View style={styles.content}>
        <View>
          <Text variant="titleLarge" style={styles.title}>
            Welcome to the Trivia Challenge!
          </Text>
        </View>

        <View>
          <Text variant="bodyMedium" style={styles.paragraph}>
            You will be presented
...
          <Text variant="bodyMedium" style={styles.paragraph}>
            Can you score 100%?
          </Text>
        </View>

        <Button mode="contained" contentStyle={styles.button} onPress={begin}>
          BEGIN
        </Button>

        <Credits />

        <Text variant="bodyMedium">
          Version: {Constants?.expoConfig?.version} {__DEV__ ? ' [DEV] ' : ''}
...
