...
            )}
          </View>
        </View>
      ) : (
        <View style={styles.results}>
          <Text variant="titleLarge" style={styles.title}>
            You scored
          </Text>
          <Text variant="titleLarge" style={styles.title}>
            {score} / 10
          </Text>

          <List.Section theme={theme}>
...
      )}
      <Button
        mode="contained"
        style={styles.button}
        contentStyle={styles.buttonContent}
        onPress={playAgain}>
        PLAY AGAIN?
      </Button>
      <Credits />
      {DEBUG && (
        <Text variant="bodyMedium" style={styles.debug}>
          State: {JSON.stringify(state, null, 2)}
        </Text>
...
