url: http://localhost:3000/trivia-trundle
---
- launchApp
- waitForAnimationToEnd
- assertVisible: "Welcome to the Trivia Challenge!"
- tapOn: "BEGIN"
- waitForAnimationToEnd

# Answer all 10 questions
- repeat:
    times: 10
    commands:
      - waitForAnimationToEnd
      - assertVisible: "?"
      - tapOn: 
          text: ".*True"
      - waitForAnimationToEnd

# Check results screen
- assertVisible: "You scored"
- repeat:
    times: 8
    commands:
      - swipe:
          start: 50%, 80%
          end: 50%, 20%
- assertVisible: "PLAY AGAIN?"
- tapOn: "PLAY AGAIN?"
- assertVisible: "Welcome to the Trivia Challenge!"
